--- a/index.html
+++ b/index.html
@@ -38,32 +38,23 @@
         <h3>Ronda</h3>
     </div>
 
-    <div class="container">
+    <div >
         <div class="row">
-            <div class="col-4"></div>
-            <div id="rojo" class="col-2 cuadrado"></div>
-            <div id="azul" class="col-2 cuadrado"></div>
-            <div class="col-4"></div>
-        </div>
+            
+            <div id="rojo" class="cuadrado"></div>
+            <div id="azul" class="cuadrado"></div>
+                   </div>
         <div class="row">
-            <div class="col-4"></div>
-            <div id="amarillo" class="col-2 cuadrado"></div>
-            <div id="verde" class="col-2 cuadrado"></div>
-            <div class="col-4"></div>
+            <div id="amarillo" class="cuadrado"></div>
+            <div id="verde" class="cuadrado"></div>
+          
         </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="script.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"
-        crossorigin="anonymous"></script>
+  
 </body>
 
 </html>
